--- a/app/src/main/res/layout/activity_header_exist_until_one_nested.xml
+++ b/app/src/main/res/layout/activity_header_exist_until_one_nested.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="top"
         android:fitsSystemWindows="true"
         app:anchorGravity="right|bottom"
-        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.RefreshHeaderBehavior"
+        app:behavior="com.ytjojo.viewlib.supernestedlayout.RefreshHeaderBehavior"
         android:layout_height="60dp"/>
     <TextView
         android:fitsSystemWindows="false"
@@ -40,7 +40,7 @@
     <android.support.v4.widget.NestedScrollView
         android:fitsSystemWindows="true"
         app:controlBehaviorName="ScrollViewBehavior"
-        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
+        app:behavior="com.ytjojo.viewlib.supernestedlayout.ScrollViewBehavior"
         android:background="#90ffffff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
