--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -100,7 +100,7 @@
             android:background="#00000000"
             android:layout_width="match_parent"
             app:controlBehaviorName="ScrollViewBehavior"
-            app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
+            app:behavior="com.ytjojo.viewlib.supernestedlayout.ScrollViewBehavior"
             android:layout_height="match_parent"
 
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
