--- a/app/src/main/res/layout/activity_recyclerview.xml
+++ b/app/src/main/res/layout/activity_recyclerview.xml
@@ -36,7 +36,7 @@
         android:id="@+id/recyclerView"
         app:controlBehaviorName="ScrollViewBehavior"
         android:nestedScrollingEnabled="true"
-        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
+        app:behavior="com.ytjojo.viewlib.supernestedlayout.ScrollViewBehavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#2f00"
