--- a/app/src/main/res/layout/activity_jianshu_scroll.xml
+++ b/app/src/main/res/layout/activity_jianshu_scroll.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <LinearLayout
-        app:scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
+        app:scrollFlags="scroll|enterAlwaysCollapsed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#e1e1e1"
