--- a/app/src/main/res/layout/activity_collapinglayout_two_nest.xml
+++ b/app/src/main/res/layout/activity_collapinglayout_two_nest.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#eeeeee"
+    app:statusBarBackground="@null"
     android:fitsSystemWindows="true">
 
     <com.ytjojo.viewlib.supernestedlayout.view.DefultRefreshView
@@ -13,7 +14,7 @@
         android:layout_height="64dp"
         android:layout_gravity="top"
         android:elevation="2dp"
-        android:fitsSystemWindows="false"
+        android:fitsSystemWindows="true"
         app:waveColor="#60FF4081"
         app:anchor="@+id/collapsingLayout"
         app:anchorGravity="right|bottom"
