--- a/nestedscrolllayout/src/main/res/values/styles_text.xml
+++ b/nestedscrolllayout/src/main/res/values/styles_text.xml
@@ -8,11 +8,12 @@
         <item name="android:textSize">14sp</item>
     </style>
     <style name="TextAppearance.Design.CollapsingLayout.Expanded" parent="TextAppearance.SuperNestedLayout">
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <!--<item name="android:textColor">?android:attr/textColorPrimary</item>-->
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">34dp</item>
     </style>
     <style name="TextAppearance.Design.CollapsingLayout.Collapsed" parent="TextAppearance.SuperNestedLayout">
-        <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">20dp</item>
     </style>
 </resources>
