--- a/nestedscrolllayout/src/main/res/values/styles_text.xml
+++ b/nestedscrolllayout/src/main/res/values/styles_text.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="TextAppearance.SuperNestedLayout" parent="android:TextAppearance">
-        <item name="android:textColor">?android:textColorPrimary</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textColorHint">?android:textColorHint</item>
         <item name="android:textColorHighlight">?android:textColorHighlight</item>
         <item name="android:textColorLink">?android:textColorLink</item>
