--- a/app/src/main/res/layout/dialog_header_scroll_bottomsheet_5.xml
+++ b/app/src/main/res/layout/dialog_header_scroll_bottomsheet_5.xml
@@ -2,6 +2,7 @@
 <com.github.ytjojo.supernestedlayout.SuperNestedLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                                        android:orientation="vertical"
+                                                       android:id="@+id/rootview"
                                                        android:layout_width="match_parent"
                                                        android:layout_height="match_parent">
     <TextView
