--- a/app/src/main/res/layout/dialog_header_scroll_bottomsheet_3.xml
+++ b/app/src/main/res/layout/dialog_header_scroll_bottomsheet_3.xml
@@ -22,7 +22,7 @@
         android:background="#EEffffff"
         app:behavior="com.github.ytjojo.supernestedlayout.BottomSheetBehavior"
         app:behavior_canExpandedFully="true"
-        app:behavior_hideable="true"
+        app:behavior_hideable="false"
         app:BottomSheet_peekHeight="80dp"
         app:behavior_skipCollapsed="true"
         app:BottomSheet_minOffset="160dp"
