--- a/app/src/main/res/layout/activity_simple_refreshheader.xml
+++ b/app/src/main/res/layout/activity_simple_refreshheader.xml
@@ -1,33 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.ytjojo.supernestedlayout.SuperNestedLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                       android:orientation="vertical"
-                                                       android:id="@+id/rootview"
-                                                       android:layout_width="match_parent"
-                                                       android:layout_height="match_parent">
-    <TextView
+<com.github.ytjojo.supernestedlayout.SuperNestedLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#eeeeee"
+    app:statusBarBackground="@color/colorPrimary"
+    android:fitsSystemWindows="true"
+    >
+    <com.github.ytjojo.supernestedlayout.demo.RefreshHeaderLoadingView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="#f2e4e4"
-        android:gravity="center"
+        android:id="@+id/refreshHeader"
+        app:anchor="@+id/toolbar"
+        android:layout_gravity="top"
+        app:anchorGravity="right|bottom"
+        android:fitsSystemWindows="true"
+        app:behavior="com.github.ytjojo.supernestedlayout.RefreshHeaderBehavior"
+        android:layout_height="60dp"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
         android:fitsSystemWindows="false"
-        android:minHeight="50dp"
-        android:text="市领导看见我就哦对哦我奇偶敌我皮京东奇偶为奇偶的奇偶为叫都叫我ID噢加我的简欧文件我家动物叫都叫我"
-        android:textSize="15sp"
-        app:controlBehaviorName="BottomSheetBehavior"
-        app:scrollFlags="scroll|exitUntilCollapsed"/>
+        android:background="@color/colorPrimary"
+        app:layoutFlags="layout_linearvertical"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <TextView
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="动作栏"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"/>
+    </android.support.v7.widget.Toolbar>
+
     <android.support.v4.widget.NestedScrollView
         android:fitsSystemWindows="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#EEffffff"
-        app:behavior="com.github.ytjojo.supernestedlayout.BottomSheetBehavior"
-        app:behavior_isAuthorPoint="true"
-        app:BottomSheet_peekHeight="80dp"
-        app:BottomSheet_minOffset="0dp"
-        app:controlBehaviorName="BottomSheetBehavior"
-        app:windowBackgroundColor="#90000000"
-        app:initState="expanded"
+        app:layoutFlags="layout_linearvertical"
         >
 
         <LinearLayout
