--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.github.ytjojo.supernestedlayout.SuperNestedLayout
+    android:id="@+id/SuperNestedLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -59,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="动作栏"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:textSize="20sp"/>
         </android.support.v7.widget.Toolbar>
 
@@ -79,6 +80,7 @@
         app:anchorGravity="right|bottom"/>
     <include layout="@layout/content_main"/>
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/NestedScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#90ffffff"
