--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -29,7 +29,7 @@
         android:clipChildren="false"
         android:elevation="3dp"
         android:fitsSystemWindows="true"
-        android:minHeight="?attr/actionBarSize"
+        android:minHeight="@dimen/actionBarSize"
         app:collapsedTitleLayoutGravity="center"
         app:controlBehaviorName="ScrollViewBehavior"
         app:expandedTitleLayoutGravity="start|left|bottom"
@@ -50,7 +50,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="@dimen/actionBarSize"
             android:fitsSystemWindows="false"
             app:SuperNested_collapseMode="pin"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
